Ligeras modificaciones el examen 1

--- a/docs/examenes/E1.tex
+++ b/docs/examenes/E1.tex
@@ -10,6 +10,7 @@
 \setlength{\topmargin}{-2cm}
 
 \begin{document}
+\pagestyle{empty}
 \begin{center}
     \textsf{\Large Procesos Estocásticos}
     \par\medskip
